add new FE RservationRule
