# routes/route_v2.go
@@ -13,4 +13,9 @@ func SetupRoutesV2(app *fiber.App) {
 	{
 		payment.Post("/merge", api_v2.CreateMergedReceipt)
 	}
+
+	reservation := api.Group("/reservation")
+	{
+		reservation.Post("/cancel/:id", api_v2.CancelReservation)
+	}
 }
